--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/main.css" />
   <!-- !Glide.js Css CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.min.css" />
+  <script src="https://assets.adobedtm.com/8459819b208c/a1e3d03da9a8/launch-87b59af53255.min.js" async></script>
   <title>E-Commerce | Home</title>
 </head>
 
