--- a/single-product.html
+++ b/single-product.html
@@ -11,6 +11,7 @@
     <!-- !Glide.js Css CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.min.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <script src="https://assets.adobedtm.com/8459819b208c/a1e3d03da9a8/launch-87b59af53255.min.js" async></script>
 
 </head>
 
