--- a/single-blog.html
+++ b/single-blog.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="css/main.css" />
     <title>E-Commerce | Single Blog</title>
+    <script src="https://assets.adobedtm.com/8459819b208c/a1e3d03da9a8/launch-87b59af53255.min.js" async></script>
 </head>
 
 <body>
