--- a/single-product.html
+++ b/single-product.html
@@ -244,7 +244,7 @@
                                 <span>2 reviews</span>
                             </div>
                             <div class="product-price">
-                                <s class="old-price">$165.00</s>
+                                <s class="old-price" id="old-price">$165.00</s>
                                 <strong class="new-price">$208.00</strong>
                             </div>
                             <p class="product-description">
